# ferry

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  operations.rs  selection_store.rs
src/modes/: explicit.rs  interactive.rs  mod.rs
src/utils/: fs_helpers.rs  mod.rs
