[package]
name = "ferry"
version = "0.2.0"
edition = "2024"
description = "A ferry for your files. Grab them from a directory, move to somewhere else, and then drop them, instead of the traditional cp/mv workflow of specifying paths ahead of the time."
repository = "https://github.com/domahet/playedtogether/"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = {version = "4.5.39", features = ["derive"]}
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.29.0"
regex = "1.11.1"
walkdir = "2.5.0"
